--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;600;700&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/3656aad70d.js" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+    <script src="https://smtpjs.com/v3/smtp.js">
+    </script>
 
 </head>
 
@@ -20,19 +23,19 @@
             <div class="nav-links" id="navLinks">
                 <i class="fa-solid fa-xmark" onclick="hideMenu()"></i>
                 <ul>
-                    <li><a href="">HOME</a></li>
-                    <li> <a href="">ABOUT</a></li>
-                    <li><a href="">COURSE</a></li>
-                    <li><a href="">BLOG</a></li>
-                    <li> <a href="">CONTACT</a></li>
+                    <li><a href="index.html">HOME</a></li>
+                    <li> <a href="about.html">ABOUT</a></li>
+                    <li><a href="course.html">COURSE</a></li>
+                    <li><a href="blog.html">BLOG</a></li>
+                    <li> <a href="contact.html">CONTACT</a></li>
                 </ul>
             </div>
             <i class="fa-solid fa-bars" onclick="showMenu()"></i>
         </nav>
         <div class="text-box">
-            <h1>World's Biggest University</h1>
-            <p>making websites with help of html css javascript is<br> the easiest task in the world.</p>
-            <a href="" class="hero-btn">visit us to know more</a>
+            <h1>Mumbai's Best College</h1>
+            <p>orem ipsum dolor sit amet, consectetur adipiscing elit, sed<br> consectetur adipiscing elit, sed</p>
+            <a href="about.html" class="hero-btn">visit us to know more</a>
         </div>
 
     </section>
@@ -43,17 +46,17 @@
         <div class="row">
 
             <div class="course-col">
-                <h3>Intermediate</h3>
+                <h3>Batchelor</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
 
             </div>
             <div class="course-col">
-                <h3>Degree</h3>
+                <h3>Masters</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
 
             </div>
             <div class="course-col">
-                <h3>Post Graduation </h3>
+                <h3>Phd.</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
 
             </div>
@@ -73,46 +76,46 @@
         </p>
         <div class="row">
             <div class="campus-col">
-                <img src="images/london.png" alt="">
+                <img src="images/mumbai.jpg" alt="">
                 <div class="layer">
-                    <h2>LONDON</h2>
+                    <h2>MUMBAI</h2>
                 </div>
             </div>
             <div class="campus-col">
-                <img src="images/newyork.png" alt="">
+                <img src="images/delhi.jpg" alt="">
                 <div class="layer">
-                    <h2>NEW YORK</h2>
+                    <h2>DELHI</h2>
                 </div>
             </div>
             <div class="campus-col">
-                <img src="images/washington.png" alt="">
+                <img src="images/chennai.jpg" alt="">
                 <div class="layer">
-                    <h2>WASHINGTON</h2>
+                    <h2>CHENNAI</h2>
                 </div>
             </div>
         </div>
 
     </section>
     <section class="facilities">
-        <h1>Our facilities</h1>
+        <h1>facilities</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
         <div class="row">
             <div class="facilities-col">
                 <img src="images/library.png" alt="">
-                <h3>World Class Library</h3>
+                <h3>Library</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
             </div>
 
 
             <div class="facilities-col">
                 <img src="images/basketball.png" alt="">
-                <h3>Largest Playground</h3>
+                <h3>Sports</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
             </div>
 
             <div class="facilities-col">
                 <img src="images/cafeteria.png" alt="">
-                <h3>Tasty and Healthy Food</h3>
+                <h3>Canteen</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit</p>
             </div>
         </div>
@@ -126,7 +129,7 @@
                 <div>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
                     </p>
-                    <h3>christine berkley</h3>
+                    <h3>Angel Singh</h3>
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
                     <i class="fa fa-star"></i>
@@ -156,11 +159,10 @@
 
     <section class="cta">
         <h1>Enroll for our various online courses <br> anywhere from the world</h1>
-        <a href="" class="hero-btn">Contact US</a>
+        <a href="contact.html" class="hero-btn">Contact US</a>
     </section>
 
     <section class="footer">
-        <h4>About Us</h4>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, <br>quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
         <div class="icons">
             <i class="fa fa-facebook"></i>
@@ -180,6 +182,12 @@
         function hideMenu() {
             navLink.style.right = "-250px";
         }
+    </script>
+    <script type="module">
+        // Import the functions you need from the SDKs you need import { initializeApp } from "https://www.gstatic.com/firebasejs/9.9.1/firebase-app.js"; import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.9.1/firebase-analytics.js"; // TODO: Add
+        SDKs for Firebase products that you want to use // https://firebase.google.com/docs/web/setup#available-libraries // Your web app's Firebase configuration // For Firebase JS SDK v7.20.0 and later, measurementId is optional const firebaseConfig
+        = { apiKey: "AIzaSyAtpQyyAla2N7jQtZFRlCtatp-9rhk1tsg", authDomain: "college-clone-509.firebaseapp.com", projectId: "college-clone-509", storageBucket: "college-clone-509.appspot.com", messagingSenderId: "638617845298", appId: "1:638617845298:web:f14f5992a71232c8dac62b",
+        measurementId: "G-TDPCT48VFG" }; // Initialize Firebase const app = initializeApp(firebaseConfig); const analytics = getAnalytics(app);
     </script>
 </body>
 
